MDEV-7402 'reset master' hangs, waits for signalled COND_xid_list

Using a boolean flag for 'there is a RESET MASTER in progress' doesn't
work very well for multiple concurrent RESET MASTER statements.
Changed to a counter.